# CHIP8_Emulator

./: CMakeLists.txt  README.md
src/: chip8_pc.cpp  chip8_pc.h  main.cpp  monitor.cpp  monitor.h  numberdisplay.cpp  numberdisplay.h
tests/: CMakeLists.txt  test.cpp
